# heattree_py

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: _quarto.yml  development.md  examples.qmd  getting-started.qmd  index.qmd  objects.json  styles.css
scripts/: build_hook.py  download_js.py
src/heattree_py/: __init__.py  _widget.py
src/heattree_py/_static/: __init__.py  heat-tree.iife.min.js
src/heattree_py/data/: __init__.py  bansal_2021_metadata.tsv  bansal_2021_tree.nwk  weisberg_2020_beast.tre  weisberg_2020_metadata.tsv  weisberg_2020_mlsa.tre
tests/: conftest.py  test_examples.py  test_widget.py
