[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heattree-py"
dynamic = ["version"]
description = "Interactive phylogenetic tree visualization for Jupyter notebooks using the heat-tree JavaScript widget"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Zachary Foster", email = "zacharyfoster1989@gmail.com" },
]
keywords = [
    "phylogenetics",
    "tree",
    "visualization",
    "jupyter",
    "notebook",
    "bioinformatics",
    "taxonomy",
    "interactive",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.0",
]

[project.optional-dependencies]
dev = [
    "hatch>=1.9",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/grunwaldlab/heattree_py"
Documentation = "https://heattree_py.readthedocs.io"
Repository = "https://github.com/grunwaldlab/heattree_py"
Issues = "https://github.com/grunwaldlab/heattree_py/issues"
Changelog = "https://github.com/grunwaldlab/heattree_py/blob/main/CHANGELOG.md"



[tool.hatch.version]
path = "src/heattree_py/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.3.0",
    "ipython>=7.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check src tests {args}"
format = "ruff format src tests {args}"
all = [
    "lint",
    "test",
]
fix = [
    "ruff check --fix src tests",
    "ruff format src tests",
]
update-js = "python scripts/download_js.py"

[tool.hatch.build.targets.wheel]
packages = ["src/heattree_py"]
include = [
    "src/heattree_py/_static/*.js",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/build_hook.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/heattree_py/_static/*.js",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build {args}"
serve = "mkdocs serve {args}"
deploy = "mkdocs gh-deploy {args}"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "Q",      # flake8-quotes
    "FURB",   # refurb
    "PERF",   # perflint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["heattree_py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '')",
    "integration: marks tests as integration tests",
]
